# miniRT

./: .gitignore  README.md  square.backup.c
miniRT/: CMakeLists.txt  Makefile  chatgpt.rt  main.c  scene.example.rt  scene.rt
miniRT.CLion/: CMakeLists.txt  main.c
miniRT.CLion.backup/: CMakeLists.txt
miniRT.CLion.backup/include/: event.h  linop.h  render.h  shade.h  utils.h
miniRT.CLion.backup/include/parsing/: errors.h  parse.h
miniRT.CLion.backup/lib/libft/: ft_isalpha.c  ft_lstclear.c  ft_lstdelone.c  ft_lstlast.c  ft_lstmap.c  ft_memmove.c  ft_putchar_fd.c  ft_putstr_fd.c
miniRT.CLion.backup/src/parsing/: parse.c
miniRT.CLion.backup/src/rt/: canvas.c  event.c  linop.c  rayop.c  render.c
miniRT.CLion.backup/src/rt/utils/: calc_cylinder_min_t.c  calc_quad_equation.c  deg_to_rad.c  isdir.c
miniRT.CLion/include/: canvas.h  color.h  intersect.h  rayop.h  render.h  screenshot.h  shade.h  utils.h
miniRT.CLion/include/parser/: errors.h
miniRT.CLion/include/parsing/: errors.h
miniRT.CLion/lib/libft/: Makefile  ft_atoi.c  ft_calloc.c  ft_isdigit.c  ft_islower.c  ft_lstadd_front.c  ft_lstiter.c  ft_memcmp.c  ft_memcpy.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_split.c  ft_strdup.c  ft_strlcpy.c  ft_strmapi.c  ft_strnstr.c  ft_strrchr.c
miniRT.CLion/lib/libft/get_next_line/: get_next_line_bonus.h
miniRT.CLion/src/: screenshot.c  tests.c
miniRT.CLion/src/parser/: errors.c  reading.c
miniRT.CLion/src/parsing/: errors.c  parse.c
miniRT.CLion/src/rt/: canvas.c  color.c  intersect.c  light.c  linop.c  rayop.c  render.c  shade.c
miniRT.CLion/src/rt/utils/: calc_cylinder_min_t.c  calc_cylinder_orient.c  calc_faceted_orient.c  calc_min_t.c  calc_quad_equation.c  calc_ray_point.c  calc_sphere_orient.c  calc_triangle_orient.c  gen_square_vertices.c  is_polygon_point.c  rad_to_deg.c
miniRT/cmake.build/: CMakeCache.txt  Makefile  cmake_install.cmake  miniRT.cbp
miniRT/include/: canvas.h  color.h  event.h  figure.h  intersect.h  light.h  linop.h  parser.h  ray.h  rayop.h  render.h  rt.h  shade.h  trace.h  utils.h
miniRT/include/parsing/: cleanup.h  errors.h  parse.h  serialize.h  validate.h
miniRT/lib/libft/: Makefile  ft_atof.c  ft_atoi.c  ft_fequal.c  ft_fgt.c  ft_flt.c  ft_isascii.c  ft_isfloatable.c  ft_isspace.c  ft_lstnew.c  ft_lstsize.c  ft_max.c  ft_memccpy.c  ft_memset.c  ft_min.c  ft_split.c  ft_split_any.c  ft_splita.c  ft_splitf.c  ft_strcmp.c  ft_strdup_until.c  ft_strjoin.c  ft_strlen.c  ft_strlen_until.c  ft_strlower.c  ft_strncmp.c  ft_strsfree.c  ft_strslen.c  ft_strupper.c  libft.h
miniRT/lib/libft/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_utils.c
miniRT/lib/mlx/: mlx_image.swiftsourceinfo  mlx_window.swiftsourceinfo
miniRT/libft/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lstadd_back.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putnbr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
miniRT/libft/get_next_line/: get_next_line_utils_bonus.c
miniRT/mlx/: Makefile  mlx_init.swiftsourceinfo
miniRT/scenes/: basic.rt  snowboy.rt  test.rt  triangle.rt
miniRT/scenes/1/: castle.rt  test.rt
miniRT/src/: main.c  screenshot.c  tests.c
miniRT/src/parsing/: cleanup.c  errors.c  parse.c  serialize.c  validate.c
miniRT/src/parsing/serializers/: serialize_A.c  serialize_R.c  serialize_a.c  serialize_c.c  serialize_cy.c  serialize_l.c  serialize_pl.c  serialize_r.c  serialize_sp.c  serialize_sq.c  serialize_tr.c
miniRT/src/parsing/serializers/helpers/: lst_figure_append.c  serialize_cy_rgb.c  serialize_orient.c  serialize_pl_rgb.c  serialize_point.c  serialize_rgb.c  serialize_sq_rgb.c
miniRT/src/parsing/validators/: valid_orient.c  valid_point3.c  valid_rgb.c  validate_R.c
miniRT/src/rt/: canvas.c  color.c  colorex.c  event.c  image.c  intersect.c  light.c  linop.c  linopex.c  meta.c  ray.c  rayop.c  render.c  shade.c
miniRT/src/rt/trace/: cylinder.c  plane.c  sphere.c  square.c  triangle.c
miniRT/src/rt/utils/: alloca_to.c  calc_cylinder_min_t.c  calc_cylinder_orient.c  calc_faceted_orient.c  calc_min_t.c  calc_quad_equation.c  calc_ray_point.c  calc_sphere_orient.c  calc_triangle_orient.c  deg_to_rad.c  ft_swap_double.c  gen_square_vertices.c  get_cam.c  imax.c  intersect_planar.c  is_polygon_point.c  isdir.c  look_at.c  mlx_reset_image.c  one_of.c  rad_to_deg.c  skip_spaces_str.c  swap_double.c
miniRT/src/utils/: calc_quad_equation.c  calc_sphere_orient.c  deg_to_rad.c  ft_swap.c
